    * Fix an issue with the signature-wrapping spans that would break other
      extensions/scripts that add event listeners to elements in messages
    * Strip quoted <embed> tags
    * Remove the Random/First sig selection option and replace with an option
      that toggles whether or not to use the most specific matching sigs
    * New CSS: Basic9for10

2009-02-13:
    * version 0.6.10
    * Links to specific posts (e.g., #p001) are now automatically changed to go
      to the last post on the current page if the post number exceeds the
      number of posts on the current page
    * Nightly builds now show a changelog when updated
    * Disable custom window titles by default
    * Ten On A Diet CSS no longer uses external images
    * Fix topic creator highlighting beyond the first page when topic creator
      labeling is disabled
    * The post on message detail is no longer highlighted when topic creator
      highlighting is used
    * A confirmation box is now shown when QuickPosting a message that only
      contains a signature
    * Tracked topics are now integrated into GameFOX
    * Disable all tag-related preferences by default
    * "Break HTML Tags" context menu item changes:
        - Hidden when not on the boards
        - Updates the character counter
        - Shown on topic list
    * A class is now added to the GameFAQs ignore message
    * Numerous performance improvements
    * The "Delete Message" context menu item is now hidden in archived topics
    * Add board links above QuickPost on message lists
    * A change in the implementation of filtering may break old stylesheets
      that use tr[style] to detect highlighting
    * New CSS: Capitalized message links
    * Numerous changes to the options window
    * Drop Firefox 1.5 support
    * GFCode now supports inline code (<em><i>)
    * Fix issue that caused HTML buttons to be positioned incorrectly for some
      users