@@ -389,6 +389,13 @@ var gamefox_utils =
     }
 
     return newObj;
+  },
+
+  extractNumber: function(value)
+  {
+    var n = parseInt(value);
+
+    return n == null || isNaN(n) ? 0 : n;
   }
 };
 
